<resources>
    <string name="app_name">HiRewards</string>

    <!--Main Fragments Strings-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Offers</string>
    <string name="title_notifications">Account</string>

    <!--Toolbaricon Strings-->
    <string name="title_more">More</string>

    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_feedback">Feedback</string>

    <!--Settings Strings-->
    <string name="updates_header">Updates</string>
    <string name="apps_header">Apps and Services</string>
    <string name="websites_header">Websites</string>
    <string name="socials_header">Socials</string>
    <string name="about_app">About HiRewards</string>
    <string name="privacy_title">Privacy</string>
    <string name="privacypolicy_header">Privacy Policy</string>

        <!--Apps and Services-->
    <string name="hiosmobile_title">HiOSMobile</string>
    <string name="hiosmobile_summary">This is our flagship app, which allows you to do things with our brands, from ordering food to checking-in, and more!</string>

    <string name="hiosweather_title">HiOSWeather</string>
    <string name="hiosweather_summary">This is our weather app, which simply allows you to check the weather, use widgets, and more!</string>

    <string name="hiossocial_title">HiOSSocial</string>
    <string name="hiossocial_summary">Our brand new social media app, this app allows you to chat with friends, and more!</string>

    <string name="hiosmusic_title">HiOSMusic</string>
    <string name="hiosmusic_summary">This is our music app. Your Music, Your Vibe.</string>

        <!--Socials-->
    <string name="facebook_title">The Highland Cafe™ Enterprises Facebook Page</string>
    <string name="threads_title">The Highland Cafe™ Enterprises Threads Profile</string>
    <string name="instagram_title">The Highland Cafe™ Enterprises Instagram Profile</string>
    <string name="instagram_summary">\@thehighlandcafe</string>

        <!--Updates-->
    <string name="updates_title">Check for Updates</string>
    <string name="updates_summary">This Version: 1.3</string>

    <string name="notifications_title">Update Notifications</string>
    <string name="notifications_summary">Join our WhatsApp Channel to get notified every time we update HiRewards.</string>

    <string name="whatsnew_title">What\'s New?</string>

        <!--Websites-->
    <string name="hienterprises_title">The Highland Cafe™ Enterprises Website</string>
    <string name="hirewards_website_title">HiRewards™ Website</string>
    <string name="hios_title">HiOS™ Website</string>
    <string name="thehighlandcafe_title">The Highland Cafe™ Website</string>

    <!--Help Center-->
    <string name="collect_title">Collecting Points</string>
    <string name="redeem_title">Redeeming Points</string>
    <string name="signup_title">Signing-Up</string>

    <!--URLs-->
    <string name="updates_url">https://github.com/aarjay123/hirewards/releases/latest</string>
    <string name="whatsnew_url">https://github.com/aarjay123/hirewards/releases/latest</string>
    <string name="notifications_url">https://whatsapp.com/channel/0029Va8U5lXISTkDAhk4bj3J</string>
    <string name="hiosmusic_url">https://github.com/aarjay123/hiosmusic/releases/latest</string>
    <string name="hiosweather_url">https://sites.google.com/view/hios-by-thc/hiosweather#h.rynyo42t0yud</string>
    <string name="hienterprises_url">https://sites.google.com/view/thehighlandcafe</string>
    <string name="hirewards_url">https://sites.google.com/view/hirewards</string>
    <string name="support_url">https://sites.google.com/view/thehighlandcafe/customer-support</string>
    <string name="facebook_url">https://www.facebook.com/profile.php?id=100095224335357</string>
    <string name="instagram_url">https://www.instagram.com/thehighlandcafe/</string>
    <string name="threads_url">https://www.threads.net/@thehighlandcafe</string>
    <string name="thehighlandcafe_url">https://hienterprises.github.io/hicafe/home</string>
    <string name="hios_url">https://hienterprises.github.io/hiosmobile/home</string>
    <string name="hiossocial_url">https://sites.google.com/view/hios-by-thc/hisocial</string>
    <string name="privacypolicy_url">https://thehighlandcafe.github.io/hiosmobileweb/activities/settings_activities/privacypolicy_activity.html</string>
    <string name="github_release_url">https://github.com/aarjay123/hirewards/releases/latest</string>

</resources>