<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:title="@string/hiosmobile_title"
        android:summary="@string/hiosmobile_summary" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/updates_url" >
        </intent>
    </Preference>
    <Preference
        android:title="@string/hiosmusic_title"
        android:summary="@string/hiosmusic_summary"
        app:icon="@drawable/ic_dashboard_black_24dp" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/hiosweather_url" >
        </intent>
    </Preference>
</PreferenceScreen>